--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
 
   </dependencies>
 
